--- a/src/main/resources/templates/departments/department-list.html
+++ b/src/main/resources/templates/departments/department-list.html
@@ -22,7 +22,7 @@
 
         <br>
 
-        <h3 th:text="#{departments.headline}">List of Departments</h3>
+        <h3 class="font-weight-bold text-secondary" th:text="#{index.section.departments}">Departments</h3>
 
         <hr>
 
