--- a/src/main/resources/templates/documents/document-list.html
+++ b/src/main/resources/templates/documents/document-list.html
@@ -24,7 +24,7 @@
 
         <br>
 
-        <h3 th:text="#{documents.headline}">List of Documents</h3>
+        <h3 class="font-weight-bold text-secondary" th:text="#{index.section.documents}">Documents</h3>
 
         <hr>
 
